# wikiwander

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
authy/: admin.py  factories.py  forms.py  models.py
authy/management/commands/: initializesuperuser.py
authy/migrations/: 0001_initial.py
authy/templates/account/: login.html  signup.html
core/: models.py  urls.py  views.py
core/management/commands/: wander.py
core/migrations/: 0001_initial.py
core/services/: wikibot.py
core/templates/core/: index.html  navbar.html  skeleton.html
core/templates/core/wikipage/partials/: history-list.html
notebooks/: wikibot.ipynb  wikibot_runner.ipynb
wikiwander/: asgi.py  settings.py  urls.py  wsgi.py
